--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -6,7 +6,7 @@
     "lang_locationIsHidden": "Hidden",
     "lang_locationInUse": "In use / total",
     "lang_locationSettings": "Settings",
-
+    "lang_locationConfig": "Config",
 
     "lang_pcID": "ID",
     "lang_pcIP": "IP",
@@ -25,5 +25,36 @@
     "lang_shortThursday": "Thu",
     "lang_shortFriday": "Fri",
     "lang_shortSaturday": "Sat",
-    "lang_shortSunday": "Sun"
+    "lang_shortSunday": "Sun",
+
+    "lang_language": "Language",
+    "lang_languageEn": "en",
+    "lang_languageDe": "de",
+    "lang_languagePt": "pt",
+    "lang_mode": "Mode",
+    "lang_mode1": "Calendar & Room",
+    "lang_mode2": "Calendar",
+    "lang_mode3": "Room",
+    "lang_mode4": "Switching",
+    "lang_ecoMode": "Eco mode (e-ink)",
+    "lang_daysToShow": "Days to show",
+    "lang_daysToShowTooltip": "[1-7] Sets how many days the calendar shows",
+    "lang_scale": "Scale",
+    "lang_scaleTooltip": "[10-90] scales the calendar width in mode 1",
+    "lang_switchTime": "Switchtime",
+    "lang_switchTimeTooltip": "[1-120] Sets the time between switching in mode 4 (in seconds)",
+    "lang_rotation": "Rotation",
+    "lang_rotation1": "0°",
+    "lang_rotation2": "+90°",
+    "lang_rotation3": "+180°",
+    "lang_rotation4": "-90°",
+    "lang_vertical": "Vertical",
+    "lang_calupdate": "Calendar update rate",
+    "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
+    "lang_roomupdate": "Room update rate",
+    "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
+    "lang_configupdate": "Config update",
+    "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
+    "lang_min": "min",
+    "lang_sec": "sec"
 }
