--- a/modules-available/locationinfo/lang/en/messages.json
+++ b/modules-available/locationinfo/lang/en/messages.json
@@ -1,4 +1,6 @@
 {
     "no-days-selected": "No days selected.",
-    "added-x-entries": "Entries added: {{0}}"
+    "added-x-entries": "Entries added: {{0}}",
+    "deleted-x-entries": "Entries deleted: {{0}}",
+    "config-saved": "Config successfully saved."
 }
