Rotation but fixed.

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -45,9 +45,9 @@
     "lang_switchTimeTooltip": "[1-120] Die Zeit die vergeht bis ein wechsel erfolgt in modus 4 (in sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0°",
-    "lang_rotation1": "+90°",
-    "lang_rotation2": "+180°",
-    "lang_rotation3": "-90°",
+    "lang_rotation1": "90° ⟲",
+    "lang_rotation2": "180°",
+    "lang_rotation3": "90° ⟳",
     "lang_vertical": "Vertikal",
     "lang_calupdate": "Kalender update rate",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minutes)",
