--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -45,9 +45,9 @@
     "lang_switchTimeTooltip": "[1-120] Sets the time between switching in mode 4 (in seconds)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0°",
-    "lang_rotation1": "+90°",
-    "lang_rotation2": "+180°",
-    "lang_rotation3": "-90°",
+    "lang_rotation1": "90° ⟲",
+    "lang_rotation2": "180°",
+    "lang_rotation3": "90° ⟳",
     "lang_vertical": "Vertical",
     "lang_calupdate": "Calendar update rate",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
