login count and offline time database queries

--- a/modules-available/statistics_reporting/lang/en/module.json
+++ b/modules-available/statistics_reporting/lang/en/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "My first module",
-    "page_title": "My first page title"
+    "module_name": "Statistics Reporting",
+    "page_title": "Statistics Reporting"
 }
