--- a/modules-available/statistics_reporting/lang/de/module.json
+++ b/modules-available/statistics_reporting/lang/de/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "Mein erstes Modul",
-    "page_title": "Mein erster Seitentitel"
+    "module_name": "Statistik Auswertung",
+    "page_title": "Statistik Auswertung"
 }
