--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -1,3 +1,13 @@
 {
-    "lang_hello": "Hallo"
+    "lang_user": "Nutzer",
+    "lang_countLogins": "Anzahl Logins",
+    "lang_client": "Client",
+    "lang_vm": "VM",
+    "lang_totalLogins": "Gesamt Logins",
+    "lang_overallOfftime": "Gesamtzeit Offline",
+    "lang_totalOffTime": "Gesamtzeit Offline",
+    "lang_clientLogout": "Letzter Logout",
+    "lang_clientStart": "Letzter Client Start",
+    "lang_room": "Raum",
+    "lang_offTime": "Zeit seit Logout"
 }
