[statistics_reporting] moved functions to own file, improved language and variable naming

--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -4,10 +4,10 @@
     "lang_client": "Client",
     "lang_vm": "VM",
     "lang_totalLogins": "Gesamt Logins",
-    "lang_overallOfftime": "Gesamtzeit Offline",
+    "lang_overallOfftime": "Insgesamte Zeit Offline",
     "lang_totalOffTime": "Gesamtzeit Offline",
-    "lang_clientLogout": "Letzter Logout",
-    "lang_clientStart": "Letzter Client Start",
+    "lang_clientLogout": "Letzter VM Logout",
+    "lang_clientStart": "Letzter Client Boot",
     "lang_room": "Raum",
     "lang_offTime": "Zeit seit Logout",
     "lang_total": "Gesamt",
