--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -5,9 +5,9 @@
     "lang_vm": "VM",
     "lang_totalLogins": "Total Logins",
     "lang_overallOfftime": "Overall time offline",
-    "lang_totalOffTime": "Time offline",
-    "lang_clientLogout": "Last Logout",
-    "lang_clientStart": "Last Client Start",
+    "lang_totalOffTime": "Total time offline",
+    "lang_clientLogout": "Last VM Logout",
+    "lang_clientStart": "Last Client Boot",
     "lang_room": "Room",
     "lang_offTime": "Time since offline",
     "lang_total": "Total",
