--- a/modules-available/sysconfig/lang/de/messages.json
+++ b/modules-available/sysconfig/lang/de/messages.json
@@ -2,6 +2,7 @@
     "config-activated": "Konfiguration {{0}} wurde aktiviert",
     "config-deleted": "Konfiguration {{0}} wurde gel\u00f6scht",
     "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
+    "could-not-determine-binddn": "Konnte Bind-DN nicht ermitteln",
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
     "missing-title": "Kein Titel eingegeben",
