--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -32,6 +32,7 @@
     "lang_customModuleInfo1": "\u00dcber ein benutzerdefiniertes Modul ist es m\u00f6glich, beliebige Dateien zum Linux-Grundsystem, das auf den Clients gebootet wird, hinzuzuf\u00fcgen. Dazu kann ein Archiv mit einer Dateisystemstruktur hochgeladen werden, die in dieser Form 1:1 in das gebootete Linux extrahiert wird.",
     "lang_customModuleInfo2": "Beispiel: Enth\u00e4lt das hochgeladene Archiv eine Datei etc\/beispiel.conf, so wird auf einem gebooteten Client diese Datei als \/etc\/beispiel.conf zu finden sein.",
     "lang_deleteLong": "Modul oder Konfiguration l\u00f6schen.",
+    "lang_determiningHomeDirectory": "Versuche Attribut f\u00fcr das Home-Verzeichnis zu ermitteln...",
     "lang_dnLookup": "Ermitteln der Bind-DN",
     "lang_download": "Herunterladen",
     "lang_downloadLong": "Dieses Modul \"so wie es ist\" herunterladen.",
@@ -66,6 +67,7 @@
     "lang_newConfiguration": "Neue Konfiguration",
     "lang_newModule": "Neues Modul",
     "lang_noContent": "Kein Inhalt!",
+    "lang_noHomeAttrFound": "Konnte kein Attribut finden, dass das Home-Verzeichnis zu enthalten scheint. Bitte manuell festlegen, wenn Einbindung gew\u00fcnscht.",
     "lang_noModuleOfType": "Kein Modul dieser Art vorhanden.",
     "lang_noOpenPort": "Auf dem angegebenen Server wurde kein offener Port gefunden.",
     "lang_noValidCert": "Der Server besitzt kein oder ein nicht valides Zertifikat.",
