--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -32,6 +32,7 @@
     "lang_customModuleInfo1": "About a custom module, it is possible to add arbitrary files to a Linux system that is booted clients. For this purpose, an archive can be uploaded using a file system structure that is extracted in this form 1:1 in the booted Linux.",
     "lang_customModuleInfo2": "Example: If the uploaded archive is the file etc\/example.conf, this file will be located as \/etc\/example.conf to a booted client.",
     "lang_deleteLong": "Delete module or configuration.",
+    "lang_determiningHomeDirectory": "Trying to determine home directory attribute...",
     "lang_dnLookup": "Looking up bind dn",
     "lang_download": "Download",
     "lang_downloadLong": "Download module \"as is\".",
@@ -66,6 +67,7 @@
     "lang_newConfiguration": "New Configuration",
     "lang_newModule": "New Module",
     "lang_noContent": "No content!",
+    "lang_noHomeAttrFound": "No home directory attribute found. Please specify it manually if you need home directories.",
     "lang_noModuleOfType": "No module of this type found.",
     "lang_noOpenPort": "There is no open LDAP port on this server.",
     "lang_noValidCert": "The server did not supply a certificate, or the certificate is invalid.",
