--- a/modules-available/locationinfo/lang/de/messages.json
+++ b/modules-available/locationinfo/lang/de/messages.json
@@ -2,5 +2,6 @@
     "no-days-selected": "Es wurden keine Tage ausgewählt.",
     "added-x-entries": "Eintr\u00e4ge hinzugef\u00fcgt: {{0}}",
     "deleted-x-entries": "Eintr\u00e4ge gelöscht: {{0}}",
+    "openingtime-updated": "Öffnungszeiten aktualisierts.",
     "config-saved": "Einstellungen erfolgreich gespeichert."
 }
