Locationinfo config: added auto scale mode. Fixed some api bugs

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -61,5 +61,6 @@
     "lang_configupdate": "Einstellungs update rate",
     "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
     "lang_min": "min",
-    "lang_sec": "sec"
+    "lang_sec": "sec",
+    "lang_autoScale": "Auto skalierung"
 }
