[sysconfig] AD/LDAP: Handle certificates with unknown CA by fingerprint if no cert is supplied

--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -105,8 +105,10 @@
     "lang_title": "Titel",
     "lang_to": "Zur",
     "lang_toSystemConfiguration": "Zur Systemkonfiguration",
+    "lang_tryingFingerprint": "Das Zertifikat des Servers kann nicht validiert werden. Wenn Sie fortfahren, wird in Zukunft der Fingerprint des Zertifikats f\u00fcr die Validierung genutzt. Wenn sich das Zertifikat \u00e4ndert, m\u00fcssen Sie diesen Wizard erneut durchf\u00fchren, um den Fingerprint zu aktualisieren. Wichtig: Wenn Sie einen Load-Balancer einsetzen, und die dahintergeschalteten Server unterschiedliche Zertifikate besitzen, k\u00f6nnen Sie dieses Verfahren nicht nutzen.",
     "lang_upload": "Hochladen",
     "lang_urlLoad": "Bild von URL laden",
+    "lang_userCertInvalid": "Das von Ihnen angegebene Zertifikat kann nicht zur Verifikation des Servers genutzt werden. Bitte geben Sie das passende Zertifikat an, oder lassen Sie das Feld leer, damit der Wizard versucht, das Zertifikat automatisch zu ermitteln.",
     "lang_userDirectory": "Benutzerverzeichnis",
     "lang_userDirectoryInfo1": "Optionale Angabe: Wenn die Clients f\u00fcr die Benutzer ein eigenes Verzeichnis (Homeverzeichnis, Benutzerverzeichnis) von einem Server einbinden sollen, geben Sie bitte hier das Format in UNC-Notation an, also z.B.",
     "lang_userDirectoryInfo2": "%s ist dabei ein Platzhalter f\u00fcr den Login-Namen des Benutzers.",
