--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -105,8 +105,10 @@
     "lang_title": "Title",
     "lang_to": "To",
     "lang_toSystemConfiguration": "Go to system configuration",
+    "lang_tryingFingerprint": "Server does not seem to have a valid certificate. If you continue, its fingerprint will be used for verification. This means you have to re-run this wizard whenever the server's certificate changes. Also note that this method will not work if you're using a load balancer and the servers behind it have individual certificates.",
     "lang_upload": "Upload",
     "lang_urlLoad": "Load image from URL",
+    "lang_userCertInvalid": "The certificate you specified could not be used to verify the server. Please make sure you pass the appropriate certificate to this wizard, or leave the field blank to let the wizard try and determine the proper certificate.",
     "lang_userDirectory": "User Directory",
     "lang_userDirectoryInfo1": "Optional: If the clients should embed a separate directory (home directory, user directory) from a server for the user, please enter here the format in UNC notation, eg",
     "lang_userDirectoryInfo2": "%s is a placeholder for the user's login name.",
