--- a/modules-available/webinterface/lang/en/template-tags.json
+++ b/modules-available/webinterface/lang/en/template-tags.json
@@ -12,6 +12,6 @@
     "lang_passwordFields": "Password fields",
     "lang_passwordsDescription": "Set whether password fields should be masked or not. The password field of the login page to the web interface is always masked.",
     "lang_privateKey": "Please paste the private key belonging to the certificate here. It has to be in \"pem\" format too, which should look like this:",
-    "lang_randomCert": "Genenrate new self-signed certificate",
+    "lang_randomCert": "Generate new self-signed certificate",
     "lang_showPasswords": "Show passwords"
 }
