[sysconfig] remove broken quotation when listing the content of a config module

--- a/modules-available/sysconfig/lang/en/module.json
+++ b/modules-available/sysconfig/lang/en/module.json
@@ -1,7 +1,7 @@
 {
     "lang_clientSshConfig": "SSH configuration",
     "lang_configurationCompilation": "Compile configuration",
-    "lang_contentOf": "Content of \"",
+    "lang_contentOf": "Content of",
     "lang_moduleAdd": "Add Module",
     "lang_noModuleFromThisGroup": "(No module from this group)",
     "lang_unknwonTaskManager": "Unknown Task Manager error",
