[statistics_reporting] added time bounds slider

--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -24,5 +24,6 @@
     "lang_last7": "Letzten 7 Tage",
     "lang_last14": "Letzten 14 Tage",
     "lang_last30": "Letzten 30 Tage",
-    "lang_last90": "Letzten 90 Tage"
+    "lang_last90": "Letzten 90 Tage",
+    "lang_apply": "Anwenden"
 }
