[statistics_reporting] added short sessions to ui

--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -3,7 +3,8 @@
     "lang_countLogins": "Anzahl Logins",
     "lang_client": "Client",
     "lang_vm": "VM",
-    "lang_totalLogins": "Gesamt Logins",
+    "lang_sessions": "Sitzungen \u2265 60s",
+    "lang_shortSessions": "Sitzungen < 60s",
     "lang_overallOfftime": "Insgesamte Zeit Offline",
     "lang_totalOffTime": "Gesamtzeit Offline",
     "lang_clientLogout": "Letzter VM Logout",
