[statistics_reporting] changed cutoffs

--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -20,8 +20,8 @@
     "lang_location": "Raum",
     "lang_medianSessionLength": "Mittlere Sitzungsdauer",
     "lang_totalTime": "Gesamte Zeit",
-    "lang_last1": "Letzten 24 Stunden",
-    "lang_last2": "Letzten 48 Stunden",
+    "lang_last1": "Heute",
+    "lang_last2": "Letzten 2 Tage",
     "lang_last7": "Letzten 7 Tage",
     "lang_last14": "Letzten 14 Tage",
     "lang_last30": "Letzten 30 Tage",
