--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -20,8 +20,8 @@
     "lang_location": "Location",
     "lang_medianSessionLength": "Median Session Length",
     "lang_totalTime": "Total Time",
-    "lang_last1": "Last 24 hours",
-    "lang_last2": "Last 48 hours",
+    "lang_last1": "Today",
+    "lang_last2": "Last 2 days",
     "lang_last7": "Last 7 days",
     "lang_last14": "Last 14 days",
     "lang_last30": "Last 30 days",
