[statistics_reporting] added location column in client table

--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -26,5 +26,6 @@
     "lang_last14": "Last 14 days",
     "lang_last30": "Last 30 days",
     "lang_last90": "Last 90 days",
-    "lang_apply": "Apply"
+    "lang_apply": "Apply",
+    "lang_notassigned": "NOT ASSIGNED"
 }
