--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -26,5 +26,6 @@
     "lang_last14": "Letzten 14 Tage",
     "lang_last30": "Letzten 30 Tage",
     "lang_last90": "Letzten 90 Tage",
-    "lang_apply": "Anwenden"
+    "lang_apply": "Anwenden",
+    "lang_notassigned": "NICHT ZUGEWIESEN"
 }
