[statistics_reporting] small label changes

--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -3,7 +3,8 @@
     "lang_countLogins": "Number of Logins",
     "lang_client": "Client",
     "lang_vm": "VM",
-    "lang_sessions": "Sessions \u2265 60s",
+    "lang_sessions": "Sessions",
+    "lang_longSessions": "Sessions \u2265 60s",
     "lang_shortSessions": "Sessions < 60s",
     "lang_overallOfftime": "Overall time offline",
     "lang_totalOffTime": "Total Time Offline",
