[statistics_reporting] i18n: Move tags used in code to separate file, delete unused tags

--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -1,34 +1,28 @@
 {
-    "lang_user": "User",
-    "lang_countLogins": "Number of Logins",
-    "lang_client": "Client",
-    "lang_vm": "VM",
-    "lang_sessions": "Sessions",
-    "lang_longSessions": "Sessions \u2265 60s",
-    "lang_shortSessions": "Sessions < 60s",
-    "lang_overallOfftime": "Overall time offline",
-    "lang_totalOffTime": "Total Time Offline",
+    "lang_apply": "Apply",
     "lang_clientLogout": "Last VM Logout",
     "lang_clientStart": "Last Client Boot",
-    "lang_room": "Room",
-    "lang_offTime": "Time since offline",
-    "lang_total": "Total",
-    "lang_perlocation": "Per Location",
+    "lang_hostname": "Client Name",
+    "lang_last1": "Today",
+    "lang_last14": "Last 14 days",
+    "lang_last2": "Last 2 days",
+    "lang_last30": "Last 30 days",
+    "lang_last7": "Last 7 days",
+    "lang_last90": "Last 90 days",
+    "lang_location": "Location",
+    "lang_longSessions": "Sessions \u2265 60s",
+    "lang_medianSessionLength": "Median Session Length",
+    "lang_overallOfftime": "Overall time offline",
     "lang_perclient": "Per Client",
+    "lang_perlocation": "Per Location",
     "lang_peruser": "Per User",
     "lang_pervm": "Per VM",
-    "lang_hostname": "Client Name",
-    "lang_location": "Location",
-    "lang_medianSessionLength": "Median Session Length",
+    "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once per week.",
+    "lang_sessions": "Sessions",
+    "lang_shortSessions": "Sessions < 60s",
+    "lang_total": "Total",
+    "lang_totalOffTime": "Total Time Offline",
     "lang_totalTime": "Total Time",
-    "lang_last1": "Today",
-    "lang_last2": "Last 2 days",
-    "lang_last7": "Last 7 days",
-    "lang_last14": "Last 14 days",
-    "lang_last30": "Last 30 days",
-    "lang_last90": "Last 90 days",
-    "lang_apply": "Apply",
-    "lang_save": "Save",
-    "lang_notassigned": "NOT ASSIGNED",
-    "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once per week."
+    "lang_user": "User",
+    "lang_vm": "VM"
 }
