--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -1,34 +1,28 @@
 {
-    "lang_user": "Nutzer",
-    "lang_countLogins": "Anzahl Logins",
-    "lang_client": "Client",
-    "lang_vm": "VM",
-    "lang_sessions": "Sitzungen",
-    "lang_longSessions": "Sitzungen \u2265 60s",
-    "lang_shortSessions": "Sitzungen < 60s",
-    "lang_overallOfftime": "Insgesamte Zeit Offline",
-    "lang_totalOffTime": "Gesamtzeit Offline",
+    "lang_apply": "Anwenden",
     "lang_clientLogout": "Letzter VM Logout",
     "lang_clientStart": "Letzter Client Boot",
-    "lang_room": "Raum",
-    "lang_offTime": "Zeit seit Logout",
-    "lang_total": "Gesamt",
-    "lang_perlocation": "Pro Raum",
+    "lang_hostname": "Client Name",
+    "lang_last1": "Heute",
+    "lang_last14": "Letzten 14 Tage",
+    "lang_last2": "Letzten 2 Tage",
+    "lang_last30": "Letzten 30 Tage",
+    "lang_last7": "Letzten 7 Tage",
+    "lang_last90": "Letzten 90 Tage",
+    "lang_location": "Raum",
+    "lang_longSessions": "Sitzungen \u2265 60s",
+    "lang_medianSessionLength": "Mittlere Sitzungsdauer",
+    "lang_overallOfftime": "Insgesamte Zeit Offline",
     "lang_perclient": "Pro Client",
+    "lang_perlocation": "Pro Raum",
     "lang_peruser": "Pro Benutzer",
     "lang_pervm": "Pro VM",
-    "lang_hostname": "Client Name",
-    "lang_location": "Raum",
-    "lang_medianSessionLength": "Mittlere Sitzungsdauer",
+    "lang_reportingDescription": "Helfen Sie uns bwLehrpool, durch das w\u00f6chentliche, automatische Verschicken eines anonymisierten Statistikberichts, zu verbessern.",
+    "lang_sessions": "Sitzungen",
+    "lang_shortSessions": "Sitzungen < 60s",
+    "lang_total": "Gesamt",
+    "lang_totalOffTime": "Gesamtzeit Offline",
     "lang_totalTime": "Gesamte Zeit",
-    "lang_last1": "Heute",
-    "lang_last2": "Letzten 2 Tage",
-    "lang_last7": "Letzten 7 Tage",
-    "lang_last14": "Letzten 14 Tage",
-    "lang_last30": "Letzten 30 Tage",
-    "lang_last90": "Letzten 90 Tage",
-    "lang_apply": "Anwenden",
-    "lang_save": "Speichern",
-    "lang_notassigned": "NICHT ZUGEWIESEN",
-    "lang_reportingDescription": "Helfen Sie uns bwLehrpool, durch das wöchentliche, automatische Verschicken eines anonymisierten Statistikberichts, zu verbessern."
+    "lang_user": "Nutzer",
+    "lang_vm": "VM"
 }
