--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -1,22 +1,14 @@
 {
     "lang_apply": "Apply",
-    "lang_clientLogout": "Last VM Logout",
-    "lang_clientStart": "Last Client Boot",
-    "lang_hostname": "Client Name",
-    "lang_last1": "Today",
-    "lang_last14": "Last 14 days",
-    "lang_last2": "Last 2 days",
-    "lang_last30": "Last 30 days",
-    "lang_last7": "Last 7 days",
-    "lang_last90": "Last 90 days",
+    "lang_displayColumns": "Select columns to display",
+    "lang_displaySelection": "Select display mode and specify time span",
+    "lang_export": "Export",
+    "lang_hostname": "Hostname",
+    "lang_lastLogout": "Last logout",
+    "lang_lastStart": "Last boot",
     "lang_location": "Location",
     "lang_longSessions": "Sessions \u2265 60s",
     "lang_medianSessionLength": "Median Session Length",
-    "lang_overallOfftime": "Overall time offline",
-    "lang_perclient": "Per Client",
-    "lang_perlocation": "Per Location",
-    "lang_peruser": "Per User",
-    "lang_pervm": "Per VM",
     "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once per week.",
     "lang_sessions": "Sessions",
     "lang_shortSessions": "Sessions < 60s",
@@ -24,5 +16,5 @@
     "lang_totalOffTime": "Total Time Offline",
     "lang_totalTime": "Total Time",
     "lang_user": "User",
-    "lang_vm": "VM"
+    "lang_vm": "Lecture"
 }
