--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -2,6 +2,7 @@
     "lang_apply": "Apply",
     "lang_displayColumns": "Select columns to display",
     "lang_displaySelection": "Select display mode and specify time span",
+    "lang_downloadReport": "Download report",
     "lang_export": "Export",
     "lang_hostname": "Hostname",
     "lang_lastLogout": "Last logout",
@@ -9,7 +10,8 @@
     "lang_location": "Location",
     "lang_longSessions": "Sessions \u2265 60s",
     "lang_medianSessionLength": "Median Session Length",
-    "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once per week.",
+    "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once a week. If you want to check what data the report contains, you can download such a report for reference below.",
+    "lang_reportingLabel": "Send anonymized usage statistics",
     "lang_sessions": "Sessions",
     "lang_shortSessions": "Sessions < 60s",
     "lang_total": "Total",
