Admin panel: New server GUI now using the backend types.

--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -74,5 +74,6 @@
     "lang_serverID": "Server ID",
     "lang_sID": "sID",
     "lang_server": "Server",
-    "lang_serverRoomId": "Server: Room ID"
+    "lang_serverRoomId": "Server: Room ID",
+    "lang_credentials": "Credentials"
 }
